--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,69 +14,142 @@ body{
 
   
 
-.bookmarkBtn {
- 
-    height: 40px;
-    border-radius: 40px;
-    border: 1px solid rgba(255, 255, 255, 0.349);
-    display: flex;
-    align-items: center;
-    justify-content:center;
-    cursor: pointer;
-    transition-duration: 0.3s;
+  .bookmarkBtn {
+    --color: #560bad;
+    font-family: inherit;
+    display: inline-block;
+    height: 2.6em;
+    line-height: 2.5em;
+    position: relative;
     overflow: hidden;
-  }
-  
-  .IconContainer {
-    width: 30px;
-    height: 30px;
-    background: linear-gradient(to bottom, rgb(255, 136, 255), rgb(172, 70, 255));
-    border-radius: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    z-index: 2;
-    transition-duration: 0.3s;
-  }
-  
-  .icon {
-    border-radius: 1px;
-  }
-  
-  .text {
-    height: 100%;
-    width: 60%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    transition: color .5s;
     z-index: 1;
-    transition-duration: 0.3s;
-    font-size: 1.0em;
-  }
-  
-  .bookmarkBtn:hover .IconContainer {
-    width: 90%;
-    transition-duration: 0.3s;
+    border-radius: 6px;
+    font-weight: 500;
+    color: white;
+   }
    
-  }
-  
-  .bookmarkBtn:hover .text {
-    transform: translate(10px);
-    width: 0;
-    font-size: 0;
-    transition-duration: 0.3s;
-  }
-  
-  .bookmarkBtn:active {
-    transform: scale(0.95);
-    transition-duration: 0.3s;
-  }
-  
+   .bookmarkBtn:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    background: var(--color);
+    height: 150px;
+    width: 200px;
+    border-radius: 50%;
+   }
+   
+   .bookmarkBtn:hover {
+    color: #fff;
+   }
+   
+   .bookmarkBtn:before {
+    top: 100%;
+    left: 100%;
+    transition: all .7s;
+   }
+   
+   .bookmarkBtn:hover:before {
+    top: -30px;
+    left: -30px;
+   }
+   
+   .bookmarkBtn:active:before {
+    background: #3a0ca3;
+    transition: background 0s;
+   }
 
+  /* Star  */
 
+  
+.container {
+  display: table;
+  margin: 0 auto 80px;
+}
 
-  /*  */
+.star {
+  display: block;
+  text-align: center;
+  font-size: 30px;
+}
+
+.star-icon {
+  display: block;
+  transition: all .2s ease-in;
+}
+
+.starred .star-icon {
+  color: #f6c342;
+}
+
+.starred {
+  animation: spin .6s forwards;
+  transform-origin: 50% 50%;
+  transition-timing-function: ease-in-out;
+}
+
+.starred .star-icon {
+  animation: spin .6s forwards;
+  transform-origin: 50% 50%;
+  -webkit-transform-origin: 50% 50%;
+  transition-timing-function: ease-in-out;
+}
+
+.unstarred .star-icon {
+  animation: unspin .3s forwards;
+  transform-origin: 50% 50%;
+  -webkit-transform-origin: 50% 50%;
+  transition-timing-function: ease-in-out;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  33% {
+    transform: rotate(175deg);
+  }
+  66% {
+    transform: rotate(120deg);
+  }
+  100% {
+    transform: rotate(144deg);
+  }
+}
+
+@keyframes unspin {
+  0% {
+    transform: rotate(142deg);
+  }
+  100% {
+    transform: rotate(72deg);
+  }
+}
+
+@keyframes hop {
+  0% {
+    transform: translate(0, 0px);
+  }
+  17% {
+    transform: translate(2px, -10px);
+  }
+  33% {
+    transform: translate(4px, 0px);
+  }
+  50% {
+    transform: translate(-2px, -7px);
+  }
+  66% {
+    transform: translate(-4px, -0px);
+  }
+  84% {
+    transform: translate(-2, -5px);
+  }
+  100% {
+    transform: translate(0, 0px);
+  }
+}
+
 
 
   @keyframes shake {
