new cart system, UI, and better optimisation

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,7 +13,9 @@ body{
   }
 
   
-
+  .table-container {
+    overflow-x: auto;
+  }
   .bookmarkBtn {
     --color: #560bad;
     font-family: inherit;
